--- a/qa/Integration/cluster_v3/master/cluster_base.sql_5c.master
+++ b/qa/Integration/cluster_v3/master/cluster_base.sql_5c.master
@@ -2,6 +2,8 @@
 SET CLUSTER SETTING
 > SET CLUSTER SETTING ts.blocks_per_segment.max_limit = 50; 
 SET CLUSTER SETTING
+> SET CLUSTER SETTING ts.raft_log.sync_period = '0s';
+SET CLUSTER SETTING
 > import database csv data ("nodelocal://1/tsdb1");
   job_id |  status   | fraction_completed |  rows  | abandon_rows | reject_rows | note
 ---------+-----------+--------------------+--------+--------------+-------------+-------
