--- a/qa/Integration/basic_v3/master/alter_ts_table.sql_1n.master
+++ b/qa/Integration/basic_v3/master/alter_ts_table.sql_1n.master
@@ -367,7 +367,7 @@ ALTER TABLE
     true
 (1 row)
 > alter table test_alter.t3 add tag attr17_a1 smallint;
-ERROR: duplicate tag name: "attr17_a1"
+ERROR: column/tag named "attr17_a1" already exists
 SQLSTATE: 42701
 > select pg_sleep(1);
   pg_sleep
@@ -389,7 +389,7 @@ ALTER TABLE
     true
 (1 row)
 > alter table test_alter.t3 add tag attr17_a1 smallint;
-ERROR: duplicate tag name: "attr17_a1"
+ERROR: column/tag named "attr17_a1" already exists
 SQLSTATE: 42701
 > select pg_sleep(1);
   pg_sleep
